background behind header and color fix
hero background now shows behind header and color across page were fixed

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -6,12 +6,26 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     padding: 15px 30px;
 }
 
 a {
     text-decoration: none;
+    color:#560000;
+}
+
+nav a {
+    font-size: 25px;
+    font-weight: bold;
+    padding: 5px 12px 0;
+    text-shadow: 0 0 1px black;
+}
+
+nav a:hover{
+    background-color: rgba(255, 255, 255, 0.626);
+    border-radius: 5px;
+    box-shadow: 0 0 2px rgb(255, 255, 255);
 }
 
 nav ul {
@@ -32,8 +46,8 @@ nav li {
 #page-logo a {
     padding: 10px;
     font-weight: 700;
-    color:brown;
-    font-size: 50px;
+    color: #560000;
+    font-size: 60px;
     font-family: 'Alegreya SC', serif;
-    text-shadow: 1px 1px 2px black;
+    text-shadow: 0px 0px 10px white;
 }
